--- a/index.html
+++ b/index.html
@@ -13,9 +13,6 @@
     <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 
-    <!-- Google API -->
-    <script src="https://apis.google.com/js/api.js"></script>
-
     <!-- Local Stylesheet -->
     <link href="local.css" rel="stylesheet">
 
@@ -26,23 +23,18 @@
 <div class="container box_extended">
     <div class="narrower">
         <div class="box_extended top_space bottom_space">
-            <iframe class="view_screen" id="screen" src="https://www.youtube.com/embed/tgbNymZ7vqY"></iframe>
+            <iframe class="view_screen" id="screen" src=""></iframe>
         </div>
         
-        <input type="text" class="form-control padding" id="searchKeywords" />
+        <!-- Search Key Input -->
 
-        <div class="box_extended top_space">
-            <button type="button" class="btn btn-primary btn-lg" id="searchAction">Search Youtube</button>
-        </div>
+        <!-- Search Button -->
 
-        <div class="box_extended top_space">
-            <ul class="result_list" id="searchResults">
-
-            </ul>
-        </div>
+        <!-- Initial Unordered List -->
     </div>
 </div>
 
 </body>
+<script src="mockApiCall.js"></script>
 <script src="app.js"></script>
 </html>
