Last minute tweaks, added mocked data.

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <div class="container box_extended">
     <div class="narrower">
         <div class="box_extended top_space bottom_space">
-            <iframe class="view_screen" id="screen" src="https://www.youtube.com/embed/tgbNymZ7vqY"></iframe>
+            <iframe class="view_screen" id="screen" src=""></iframe>
         </div>
         
         <input type="text" class="form-control padding" id="searchKeywords" />
@@ -44,5 +44,6 @@
 </div>
 
 </body>
+<script src="mockApiCall.js"></script>
 <script src="app.js"></script>
 </html>
